<resources>
    <string name="app_name">Flock n Save</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="cities_register">
        <item>Select Region</item>
        <item>Auckland</item>
        <item>Bay of Plenty</item>
        <item>Hawkes Bay</item>
        <item>Manawatu/Whanganui</item>
        <item>Northland</item>
        <item>Taranaki</item>
        <item>Waikato</item>
        <item>Wellington</item>
        <item>Canterbury</item>
        <item>Marlborough</item>
        <item>Otago</item>
        <item>Southland</item>
        <item>Tasman / Nelson</item>
        <item>West Coast</item>
    </string-array>


    <string-array name="industry">
        <item>Select Industry</item>
        <item>Construction</item>
        <item>Fishing</item>
        <item>Forestry</item>
        <item>Horticulture</item>
        <item>Hospitality</item>
        <item>Infrastructure</item>
        <item>Agriculture</item>
    </string-array>

    <string-array name="category">
        <item>Select Category</item>
        <item>Agriculture Contracting</item>
        <item>Animal Health</item>
        <item>Construction</item>
        <item>Dairy Shed Supplies</item>
        <item>Electricity</item>
        <item>Fencing</item>
        <item>Fertiliser</item>
        <item>Finance</item>
        <item>Fuel, Oils and Lubricants</item>
        <item>Safety and Clothing</item>
        <item>Stockfeed</item>
        <item>Vehicles</item>
        <item>Water and Drainage</item>
        <item>Weed and Pest</item>
    </string-array>

    <string-array name="person_type">
        <item>Select User Type</item>
        <item>Buyer</item>
        <item>Supplier</item>
    </string-array>

    <string-array name="person_type_admin">
        <item>Select User Type</item>
        <item>Admin</item>
        <item>Buyer</item>
        <item>Supplier</item>
    </string-array>


    <string name="buyer_text_home">You can now quickly and easily amplify your purchasing
        power from multiple suppliers. No ringing around, haggling, emails, searching or
        comparing apples with lemons.</string>

    <string name="supplier_text_home">You can now easily and economically access incremental
        sales opportunities.</string>


    <!-- About Us Page Tab Titles -->
    <string name="about_how">How</string>
    <string name="about_why">Why</string>
    <string name="about_what">What</string>
    <string name="about_when">When</string>
    <string name="about_where">Where</string>
    <string name="about_who">Who</string>

    <!-- About Us text -->
    <string name="why_text">
        FlocknSave is a new game changing tool that enables small
        businesses to come together and purchase goods &amp; services more efficiently
        to reduce their input costs, whilst Suppliers benefit by reducing new customer acquisition cost.
    </string>

    <string name="how_text_1">
        We provide an \'Open Source Market Place\'
    </string>
    <string name="how_text_1_1">
        Everyone is instantly accessible in one place no adverts
    </string>
    <string name="how_text_1_2">
        No spending hours searching for suppliers or customers
    </string>

    <string name="how_text_2">
        We enable \'Commoditization\'
    </string>
    <string name="how_text_2_1">
        Products by specification not by brand
    </string>
    <string name="how_text_2_2">
        No spending hours comparing apples with bananas
    </string>

    <string name="how_text_3">
        We enable \'Aggregation\'
    </string>
    <string name="how_text_3_1">
        Instant Power in numbers Flock together n Save
    </string>
    <string name="how_text_3_2">
        No spending hours getting others onboard to increase volumes
    </string>

    <string name="how_text_4">
        Only the \'Best price wins\'
    </string>
    <string name="how_text_4_1">
        Automatic live reverse auction plus weekly option
    </string>
    <string name="how_text_4_2">
        No spending hours haggling on the phone or by email
    </string>

    <string name="how_text_5">
        You are \'Anonymous\'
    </string>
    <string name="how_text_5_1">
        Buyers and Suppliers remain anonymous
    </string>
    <string name="how_text_5_2">
        No need to accept any offer or obligation to bid
    </string>

    <string name="what_text">
        FlocknSave can be used to purchase generic goods and services like Electricity,
        Fuel, Finance, Fencing, Fertiliser, Animal, Health, Sprays, Contracting etc.
    </string>

    <string name="when_text">
        FlocknSave is available 24 /7 for SME Buyers, Suppliers who believe in helping
        others save time and money will ultimately benefit themselves. The more who participate the more effective the results.
    </string>

    <string name="where_text">
        FlocknSave is available on any device 24/7 in the upper North Island and growing every
        day as members advise us of their needs and tell others of the time and money savings benefits.
    </string>

    <string name="who_text_1">
        “Like you, we were frustrated at the cost of basic goods and services in NZ and how it holds the economy back?”
    </string>

    <string name="who_text_2">
        “So we decided to put our money where our mouths were and develop a market place where Buyers and Suppliers
        can come together &amp; negotiate the best deal quickly and effectively”
    </string>

    <string name="who_text_3">
        “Now its your turn&#8230; Help us by getting amongst it”.
    </string>

    <string name="who_text_4">
        Flock together n Save together
    </string>

    <string name="who_text_5">
        Colin Mc Dowell &amp; Peter Stockley
    </string>

    <!-- How it works text -->
    <string name="how_it_h_1">
        In a Nutshell
    </string>
    <string name="how_it_text_1">
        FlocknSave®  transforms the way you buy or sell everyday goods &amp; services, making doing business easier, faster and cheaper.
        Suppliers compete for Buyers combined generic demand, in a live reverse auction environment. The process takes minutes rather than days.
    </string>

    <string name="how_it_h_2">
        Search &amp; Save to List
    </string>
    <string name="how_it_text_2">
        Simply compare \'apples with apples\' of generic goods or services in each region.

        Buyers and Suppliers search by product category, region and specification and then add Goods or Services to their \'Favourites List\'.
        This process simplifies and commoditizes product selection.
    </string>

    <string name="how_it_h_3">
        Cart Submission &amp; Bidding
    </string>
    <string name="how_it_text_3">
        Buyers can make up a cart to achieve the most competitive combination of products before submitting to eligible
        Suppliers who may want to provide a competitive up-front price or save their best price until the Flocktion close.
    </string>

    <string name="how_it_h_4">
        Accept/ Decline &amp; Settlement
    </string>
    <string name="how_it_text_4">
        On acceptance of the offer the Buyer and Supplier provide the goods and payment based on the details
        of the Voucher. The Buyer provides feedback on the successful delivery of the goods or services.
    </string>

    <!-- Customer Account Page Tab Titles -->
    <string name="account_electricity">Electricity</string>
    <string name="account_delivery_location">Delivery Location</string>

</resources>
