<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/whoText"
            android:text="@string/who_text_1" />

        <TextView
            style="@style/whoText"
            android:text="@string/who_text_2" />

        <TextView
            style="@style/whoText"
            android:text="@string/who_text_3" />

        <TextView
            style="@style/whoText"
            android:text="@string/who_text_4" />

        <TextView
            style="@style/whoText"
            android:text="@string/who_text_5"
            android:textColor="@color/flocknsaveGreen"/>

    </LinearLayout>
</ScrollView>